Add API method for talon
