# Space/venus/internal/gin/api/service/post_talon.go
@@ -1,0 +1,15 @@
+package service
+
+import (
+	"venus/internal/gin/api/domain"
+	db_services "venus/internal/gorm/services"
+)
+
+func PostTalon(req domain.PostTalonRequest, dbc db_services.DbController) (*domain.PostTalonResponse, error) {
+	resp, err := dbc.TalonNew(req.Time, req.UserId, req.OrderId)
+	if err != nil {
+		return nil, err
+	}
+
+	return &domain.PostTalonResponse{TalonId: *resp}, nil
+}
