# Space/venus/internal/gorm/services/controller.go
@@ -1,14 +1,20 @@
 package db_services
 
 import (
+	"time"
 	"venus/internal/config"
+	db_domain "venus/internal/gorm/domain"
 	db_migration "venus/internal/gorm/migration"
 
 	"gorm.io/driver/postgres"
 	"gorm.io/gorm"
 )
 
-type DbController interface{}
+type DbController interface {
+	// Talon
+	TalonNew(time time.Time, userId, orderId uint) (*uint, error)
+	TalonGetById(talonId uint) (*db_domain.Talon, error)
+}
 
 type dbController struct {
 	dbConn *gorm.DB
